--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-swipeable-views": "^0.13.9",
     "tailwindcss": "^1.2.0"
   },
   "scripts": {
